Setup items model
