# api/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 swagger: "2.0"
 info:
   version: "0.0.1"
-  title: Hello World App
+  title: Takatukazettel
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
@@ -18,17 +18,17 @@ consumes:
 produces:
   - application/json
 paths:
-  /hello:
-    # binds a127 app logic to a route
-    x-swagger-router-controller: hello_world
+  /items:
+    x-swagger-router-controller: items
+    
     get:
-      description: Returns 'Hello' to the caller
+      description: Returns all items
       # used as the method name of the controller
-      operationId: hello
+      operationId: items
       parameters:
-        - name: name
+        - name: creator
           in: query
-          description: The name of the person to whom to say hello
+          description: Only return items by a specific creator
           required: false
           type: string
       responses:
@@ -36,22 +36,130 @@ paths:
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/HelloWorldResponse"
+            $ref: "#/definitions/Items"
         # responses may fall through to errors
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+            
+    post:
+      description: Add a new item to the list
+      operationId: save
+      parameters:
+        - name: item
+          description: Item properties
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Item"
+      responses:
+        "201":
+          description: Success
+          schema:
+            $ref: "#/definitions/Response"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+            
+  /items/{id}:
+    x-swagger-router-controller: items
+    
+    get:
+      description: Get a item
+      operationId: find
+      parameters:
+        - name: id
+          description: Item id
+          type: string
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Item"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+                    
+    put:
+      description: Update an item
+      operationId: update
+      parameters:
+        - name: id
+          description: Item id
+          type: string
+          in: path
+          required: true
+        - name: item
+          description: Item properties
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Item"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Response"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+            
+    delete:
+      description: Delete an item
+      operationId: remove
+      parameters:
+        - name: id
+          description: Item id
+          type: string
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Response"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+            
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  HelloWorldResponse:
-    required:
-      - message
+  Item:
     properties:
-      message:
+      id:
         type: string
+        description: Unique identifier representing a item
+      title:
+        type: string
+        description: Title of the item
+      creator:
+        type: string
+        description: Creator of the item
+  Items:
+    type: array
+    items:
+      $ref: '#/definitions/Item'
+      
+  Response:
+    type: object
+    properties:
+      success:
+        type: number
+      description:
+        type: string
+    required:
+      - success
+      - description
+      
   ErrorResponse:
     required:
       - message
